# colorschemer

./: .gitignore  README.md  pyproject.toml
assets/themes/: base16.json  iterm2.json
colorschemer/: __init__.py  __main__.py  clustering.py  launcher.py  main.py  theme_data.py
colorschemer/components/: __init__.py  app.py  preview.py  search.py  settings.py  themes.py
colorschemer/components/settings/: __init__.py  kmeans.py
colorschemer/extractors/: __init__.py  factory.py  interfaces.py  kmeans.py
colorschemer/utils/: __init__.py  cache.py  terminal.py
